#503 - Aligning the 'no emails in inbox' message to the 'nothing selected' message for different browser displays (in a, ugly way. Must refactor this to avoid negative margins).

--- a/web-ui/app/scss/_mascot.scss
+++ b/web-ui/app/scss/_mascot.scss
@@ -33,7 +33,8 @@
 
 #no-mails-available-pane {
     text-align: center;
-    line-height: 65vh;
+    line-height: 100vh;
+    margin-top: -130px;
 
   .scene{
     display:inline-block;
